kotlin-ide/idea/testData/multiModuleHighlighting/multiplatform/depends/a_common/common.kt
expect class <error descr="[NO_ACTUAL_FOR_EXPECT] Expected class 'My' has no actual declaration in module a_Common">My</error>
expect fun <error descr="[NO_ACTUAL_FOR_EXPECT] Expected function 'bar' has no actual declaration in module a_Common">bar</error>()